docs-archive/apache-airflow-providers-amazon/9.10.0/_sources/_api/airflow/providers/amazon/aws/executors/aws_lambda/lambda_executor/index.rst.txt
airflow.providers.amazon.aws.executors.aws_lambda.lambda_executor
=================================================================

.. py:module:: airflow.providers.amazon.aws.executors.aws_lambda.lambda_executor


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.executors.aws_lambda.lambda_executor.AwsLambdaExecutor


Module Contents
---------------

.. py:class:: AwsLambdaExecutor(*args, **kwargs)

   Bases: :py:obj:`airflow.executors.base_executor.BaseExecutor`


   An Airflow Executor that submits tasks to AWS Lambda asynchronously.

   When execute_async() is called, the executor invokes a specified AWS Lambda function (asynchronously)
   with a payload that includes the task command and a unique task key.

   The Lambda function writes its result directly to an SQS queue, which is then polled by this executor
   to update task state in Airflow.


   .. py:attribute:: queued_tasks
      :type:  dict[airflow.models.taskinstancekey.TaskInstanceKey, airflow.executors.workloads.All]


   .. py:attribute:: pending_tasks
      :type:  collections.deque


   .. py:attribute:: running_tasks
      :type:  dict[str, airflow.models.taskinstancekey.TaskInstanceKey]


   .. py:attribute:: lambda_function_name


   .. py:attribute:: sqs_queue_url


   .. py:attribute:: dlq_url


   .. py:attribute:: qualifier


   .. py:attribute:: max_invoke_attempts


   .. py:attribute:: attempts_since_last_successful_connection
      :value: 0



   .. py:attribute:: IS_BOTO_CONNECTION_HEALTHY
      :value: False



   .. py:method:: start()

      Call this when the Executor is run for the first time by the scheduler.



   .. py:method:: check_health()

      Check the health of the Lambda and SQS connections.

      For lambda: Use get_function to test if the lambda connection works and the function can be
      described.
      For SQS: Use get_queue_attributes is used as a close analog to describe to test if the SQS
      connection is working.



   .. py:method:: load_connections(check_connection = True)

      Retrieve the AWS connection via Hooks to leverage the Airflow connection system.

      :param check_connection: If True, check the health of the connection after loading it.



   .. py:method:: sync()

      Sync the executor with the current state of tasks.

      Check in on currently running tasks and attempt to run any new tasks that have been queued.



   .. py:method:: queue_workload(workload, session)


   .. py:method:: execute_async(key, command, queue=None, executor_config=None)

      Save the task to be executed in the next sync by inserting the commands into a queue.

      :param key: A unique task key (typically a tuple identifying the task instance).
      :param command: The shell command string to execute.
      :param executor_config:  (Unused) to keep the same signature as the base.
      :param queue: (Unused) to keep the same signature as the base.



   .. py:method:: attempt_task_runs()

      Attempt to run tasks that are queued in the pending_tasks.

      Each task is submitted to AWS Lambda with a payload containing the task key and command.
      The task key is used to track the task's state in Airflow.



   .. py:method:: sync_running_tasks()

      Poll the SQS queue for messages indicating task completion.

      Each message is expected to contain a JSON payload with 'task_key' and 'return_code'.
      Based on the return code, update the task state accordingly.



   .. py:method:: process_queue(queue_url)

      Poll the SQS queue for messages indicating task completion.

      Each message is expected to contain a JSON payload with 'task_key' and 'return_code'.

      Based on the return code, update the task state accordingly.



   .. py:method:: try_adopt_task_instances(tis)

      Adopt task instances which have an external_executor_id (the serialized task key).

      Anything that is not adopted will be cleared by the scheduler and becomes eligible for re-scheduling.

      :param tis: The task instances to adopt.



   .. py:method:: end(heartbeat_interval=10)

      End execution. Poll until all outstanding tasks are marked as completed.

      This is a blocking call and async Lambda tasks can not be cancelled, so this will wait until
      all tasks are either completed or the timeout is reached.

      :param heartbeat_interval: The interval in seconds to wait between checks for task completion.



   .. py:method:: terminate()

      Get called when the daemon receives a SIGTERM.



